fix(podcast): overflow issue with embedded player and long titles

--- a/assets/styles/embed.scss
+++ b/assets/styles/embed.scss
@@ -14,6 +14,7 @@ html, body {
   pointer-events: none;
   position: absolute;
   top: 0;
+  right: 10px;
   @media ($small-devices) {
     left: 15px;
   }
@@ -35,9 +36,9 @@ html, body {
     font-size: 16px;
     font-weight: 400;
     margin-top: 0;
-    max-width: 100%;
     white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
     @media ($small-devices) {
       font-size: 14px;
     }
